--- a/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/app/src/main/res/menu/top_app_bar_menu.xml
@@ -1,6 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/saved_item"
+        android:icon="@drawable/ic_baseline_folder_24"
+        android:title="@string/privacy_policy"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/privacy"
