--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,9 +13,17 @@
     <color name="darkGrey">#47526C</color>
     <color name="orange">#F57C00</color>
     <color name="yellow">#FBC02D</color>
-    <color name="your_thumb_color">#E64A19</color>
-    <color name="ligh_blue">#0288D1</color>
     <color name="purple">#804CFE</color>
     <color name="green">#388E3C</color>
     <color name="red">#D32F2F</color>
+    <color name="light_blue">#64B5F6</color>
+    <color name="gray">#808080</color>
+    <color name="dark_orange">#FF4500</color>
+    <color name="blue">#2196F3</color>
+
+
+
+
+
+
 </resources>
